Add highlights to menu

--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,11 @@
                   <details>
                     <summary>Properties</summary>
                     <ul>
-                      <li><a href="#test">GET</a></li>
-                      <li><a>POST</a></li>
-                      <li><a>PATCH</a></li>
+                      <li>
+                        <a href="#test" class="menu-option">GET</a>
+                      </li>
+                      <li><a class="menu-option">POST</a></li>
+                      <li><a class="menu-option">PATCH</a></li>
                     </ul>
                   </details>
                 </li>
