Add footer to api docs html

--- a/public/index.html
+++ b/public/index.html
@@ -269,6 +269,19 @@
         </section>
       </main>
     </div>
+    <footer class="flex flex-col justify-center">
+      <hr class="mx-5" />
+      <p class="mt-2 mb-4 text-xs text-center">
+        © 2025 Kieran O'Brien |
+        <a href="https://kieranobrien.dev" class="hover:text-blue-400"
+          >kieranobrien.dev</a
+        >
+        |
+        <a href="mailto:hello@kieranobrien.dev" class="hover:text-blue-400"
+          >hello@kieranobrien.dev</a
+        >
+      </p>
+    </footer>
   </body>
   <script src="./main.js"></script>
 </html>
