Add scrolling to textareas for smaller devices

--- a/public/index.html
+++ b/public/index.html
@@ -212,7 +212,7 @@
                 <textarea
                   readonly
                   rows="14"
-                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none overflow-hidden bg-base-100"
+                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none lg:overflow-hidden bg-base-100"
                 >
 {
   "reviews": [
@@ -235,7 +235,7 @@
                 <h3 id="post-review" class="text-xl font-semibold mt-8 mb-2">
                   <span class="bg-blue-400 rounded-lg p-1">POST</span> - Review
                 </h3>
-                <h4 class="text-lg mb-2">
+                <h4 class="text-lg mb-2 break-all">
                   https://airbnc-backend/api/properties/<span
                     class="text-blue-400"
                     >{propertyId}</span
@@ -252,7 +252,7 @@
                 <textarea
                   readonly
                   rows="5"
-                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none overflow-hidden bg-base-100"
+                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none lg:overflow-hidden bg-base-100"
                 >
 {
     "guest_id": <id>,
@@ -269,7 +269,7 @@
                 <textarea
                   readonly
                   rows="14"
-                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none overflow-hidden bg-base-100"
+                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none lg:overflow-hidden bg-base-100"
                 >
 {
   "reviews": [
@@ -293,7 +293,7 @@
                   <span class="bg-blue-400 rounded-lg p-1">DELETE</span> -
                   Review
                 </h3>
-                <h4 class="text-lg mb-2">
+                <h4 class="text-lg mb-2 break-all">
                   https://airbnc-backend/api/reviews/<span class="text-blue-400"
                     >{reviewId}</span
                   >
@@ -325,7 +325,7 @@
     </div>
     <footer class="flex flex-col justify-center">
       <hr class="mx-5" />
-      <p class="mt-2 mb-4 text-md sm:text-sm text-center">
+      <p class="mt-2 mb-4 text-sm text-center">
         © 2025 Kieran O'Brien |
         <a href="https://kieranobrien.dev" class="hover:text-blue-400"
           >kieranobrien.dev</a
