--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,13 @@
     <div class="navbar top-0 left-0 w-full bg-base-200 shadow-md h-16">
       <div class="navbar-start">
         <i class="ri-home-smile-line text-3xl p-4 sm:pl-14 pr-3"></i>
-        <h1 class="text-xl">AirBNC - API Documentation</h1> 
+        <h1 class="text-xl">AirBNC - API Documentation</h1>
       </div>
-      <div class="navbar-end pr-4 sm:pr-14">
-        <i class="btn ri-moon-fill text-xl" id="mode-button"></i>
+      <div class="navbar-end gap-1 pr-4 sm:pr-14">
+        <a href="https://github.com/kieran-obrien/AirBNC"
+          ><i class="btn ri-github-fill text-xl"></i
+        ></a>
+        <i class="btn ri-moon-fill text-xl font-semibold" id="mode-button"></i>
       </div>
     </div>
     <div class="flex flex-wrap min-h-screen pt-5 p-4 sm:p-16 w-full">
