Add users endpoint info

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <a href="https://github.com/kieran-obrien/AirBNC"
           ><i class="btn ri-github-fill text-xl"></i
         ></a>
-        <i class="btn ri-moon-fill text-xl font-semibold" id="mode-button"></i>
+        <i class="btn ri-moon-fill text-xl" id="mode-button"></i>
       </div>
     </div>
     <div class="flex flex-wrap min-h-screen pt-5 p-4 sm:p-16 w-full">
@@ -98,10 +98,12 @@
                     <summary>Users</summary>
                     <ul>
                       <li class="ml-5">
-                        <a class="menu-option">GET - User</a>
+                        <a href="#get-user" class="menu-option">GET - User</a>
                       </li>
                       <li class="ml-5">
-                        <a class="menu-option">PATCH - User Details</a>
+                        <a href="#patch-user" class="menu-option"
+                          >PATCH - User Details</a
+                        >
                       </li>
                     </ul>
                   </details>
@@ -317,6 +319,104 @@
                 >
 {
     no body
+}
+</textarea
+                >
+              </div>
+            </section>
+            <section name="Users" class="px-7">
+              <h2 class="text-2xl font-semibold mb-2">Users</h2>
+              <hr />
+              <div name="GET - User">
+                <h3 id="get-user" class="text-xl font-semibold mt-8 mb-2">
+                  <span class="bg-blue-400 rounded-lg p-1">GET</span> - User
+                </h3>
+                <h4 class="text-lg mb-2 w-full break-all">
+                  https://airbnc-backend/api/users/<span class="text-blue-400"
+                    >{userId}</span
+                  >
+                </h4>
+                <p class="mb-2">
+                  Fetches all details of a user, specified by their
+                  <em>user id</em>.
+                </p>
+                <div class="flex items-center gap-2 justify-start mb-2">
+                  <h4 class="text-lg">Success -</h4>
+                  <i class="ri-emotion-line text-3xl text-success"></i>
+                  <p class="text-xl font-['IBM_Plex_Mono'] text-success">200</p>
+                </div>
+                <textarea
+                  readonly
+                  rows="11"
+                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none lg:overflow-hidden bg-base-100"
+                >
+{
+  "user":  {
+      "user_id": <id>,
+      "first_name": <name>,
+      "surname": <name>,
+      "email": <email>,
+      "phone_number": <phone number>,
+      "avatar": <image url>
+      "created_at": <data>
+      }
+}
+</textarea
+                >
+              </div>
+              <div name="PATCH - User Details">
+                <h3 id="patch-user" class="text-xl font-semibold mt-8 mb-2">
+                  <span class="bg-blue-400 rounded-lg p-1">PATCH</span> - User
+                  Details
+                </h3>
+                <h4 class="text-lg mb-2 break-all">
+                  https://airbnc-backend/api/users/<span class="text-blue-400"
+                    >{userId}</span
+                  >
+                </h4>
+                <p class="mb-2">
+                  Updates the details for a single users' details, specified by
+                  their
+                  <em>user id</em>. Expects correct payload.
+                </p>
+                <div class="flex items-center gap-2 justify-start mb-2">
+                  <h4 class="text-lg">
+                    Expected Payload (Any combination of keys listed below) -
+                  </h4>
+                  <i class="ri-rocket-2-line text-3xl text-warning"></i>
+                </div>
+                <textarea
+                  readonly
+                  rows="7"
+                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none lg:overflow-hidden bg-base-100"
+                >
+{
+    "first_name": <name>,
+    "surname": <name>,
+    "email": <email>,
+    "phone": <number>,
+    "avatar": <image_url>
+}
+</textarea
+                >
+                <div class="flex items-center gap-2 justify-start mb-2">
+                  <h4 class="text-lg">Success -</h4>
+                  <i class="ri-emotion-line text-3xl text-success"></i>
+                  <p class="text-xl font-['IBM_Plex_Mono'] text-success">200</p>
+                </div>
+                <textarea
+                  readonly
+                  rows="9"
+                  class="font-['IBM_Plex_Mono'] mb-2 border border-blue-500 rounded-md p-2 w-full resize-none lg:overflow-hidden bg-base-100"
+                >
+"user":  {
+      "user_id": <id>,
+      "first_name": <name>,
+      "surname": <name>,
+      "email": <email>,
+      "phone_number": <phone number>,
+      "avatar": <image url>
+      "created_at": <data>
 }
 </textarea
                 >
