Change dev data, fix bug in data

--- a/public/index.html
+++ b/public/index.html
@@ -426,6 +426,12 @@
         </section>
       </main>
     </div>
+    <div>
+      <form class="bg-blue-400" id="get-tester">
+        <input id="tester-input" class="bg-green-400" type="text" />
+        <button id="tester-button" class="btn bg-red-400">HELLO</button>
+      </form>
+    </div>
     <footer class="flex flex-col justify-center">
       <hr class="mx-5" />
       <p class="mt-2 mb-4 text-sm text-center">
